# ftp

./: CMakeLists.txt
include/: mysock.h
src/: client.cpp  server.cpp
